<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cmcc_layout_father"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:visibility="gone" >

    <TextView
        android:id="@+id/top_waysTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/xcsdk_cmcc"
        android:textColor="@android:color/black" />
    <!-- alipay -->

    <RelativeLayout
        android:id="@+id/cmcc_chossemoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/money_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pay_numtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xcsdk_pay_amount"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/money_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xcsdk_rmb_200"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_phonenum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/money_layout"
            android:text="@string/xcsdk_tip_input_mobile"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/get_phonenum"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_phonenum"
            android:inputType="text|phone"
             />

        <Button
            android:id="@+id/cmcc_enter"
            android:layout_width="65dp"
            android:layout_height="39dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/get_phonenum"
            android:text="@string/xcsdk_next_step"
            android:textColor="@android:color/black" />
    </RelativeLayout>
    
    <!-- 支付完毕后显示 -->
    <RelativeLayout
        android:id="@+id/paysueess_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/pay_cmcc_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/first_step"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/xcsdk_charge_sms_sent"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/first_step"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/xcsdk_pay_as_sms"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/first_step"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/xcsdk_tip_pay_finish"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/close_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:text="@string/xcsdk_finish_pay_btn"
            android:textColor="@android:color/black" />
    </RelativeLayout>

</RelativeLayout>